# Project-sentinel

./: .env.example  README.md  db.sqlite3  debug_analyze.py  manage.py  pyproject.toml  requirements-minimal.txt  requirements-vercel.txt  requirements.txt  vercel.json
docker/: docker-compose.yml
sentinel_core/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
sentinel_core/settings/: base.py  development.py  production.py
src/: __init__.py
src/analysis/: __init__.py  deep_analysis.py  models.py  pattaasu.py  urls.py  views.py
src/chatbot/: __init__.py  anand_bot.py
src/dashboard/: __init__.py  admin.py  api.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
src/dashboard/migrations/: 0001_initial.py
src/ingestion/: __init__.py  edgar.py  fetchers.py  handlers.py  indian_stocks.py  multi_source.py  nse_fetcher.py  perplexity_scraper.py  tasks.py  urls.py  views.py
src/knowledge/: __init__.py  builder.py  client.py  ontology.py  urls.py  views.py
src/llm/: __init__.py  base.py  config.py  manager.py  prompt_builder.py  tokenizer.py
src/llm/providers/: __init__.py  anthropic.py  gemini.py  grok.py  groq.py  ollama.py  openai.py  openrouter.py  together.py
static/css/: main.css
templates/account/: login.html  signup.html
templates/dashboard/: base.html  chat.html  index.html  monitor.html
tests/: conftest.py  test_llm.py  test_pattaasu.py
